--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/font": "^13.4.7",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
