--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@rainbow-me/rainbowkit": "^1.0.5",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -25,6 +26,8 @@
     "react-hook-form": "^7.45.1",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
+    "viem": "^1.2.13",
+    "wagmi": "^1.3.8",
     "zod": "^3.21.4"
   },
   "devDependencies": {
