--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/server": "^10.26.0",
     "@uniswap/sdk": "^3.0.3",
     "clsx": "^1.2.1",
+    "merkletreejs": "^0.3.10",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
