--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@trpc/server": "^10.26.0",
     "@uniswap/sdk": "^3.0.3",
     "clsx": "^1.2.1",
+    "drizzle-orm": "^0.27.2",
     "merkletreejs": "^0.3.10",
     "next": "^13.4.2",
+    "pg": "^8.11.1",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
@@ -35,12 +38,14 @@
   "devDependencies": {
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
+    "@types/pg": "^8.10.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
+    "drizzle-kit": "^0.19.10",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "postcss": "^8.4.21",
