--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.27.2",
     "merkletreejs": "^0.3.10",
     "next": "^13.4.12",
+    "nextjs-toploader": "^1.4.2",
     "pg": "^8.11.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
