--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.5.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/pg": "^8.10.2",
