--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-responsive": "^9.0.2",
     "tailwind-merge": "^1.13.2",
     "viem": "^1.2.13",
     "wagmi": "^1.3.8",
